# crane-auth

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0e7b21e9b3d9_init_migration.py  8d1e7fbed693_initial_migration.py  a99cb3b643ce_initial_revision.py
crane_auth/: settings.py
crane_auth/app/: dependencies.py  error_handlers.py  exceptions.py  main.py
crane_auth/app/routers/: auth.py  user.py
crane_auth/domain/: exceptions.py
crane_auth/domain/entities/: company.py  tokens.py  user.py
crane_auth/domain/value_objects/: roles.py  types.py
crane_auth/infra/repositories/: refresh_session_repository.py  user.py
crane_auth/infra/sqlalchemy_db/: __init__.py  base.py  utils.py
crane_auth/interactor/: exceptions.py
crane_auth/interactor/dto/: __init__.py  auth.py
crane_auth/interactor/use_cases/: user_creating.py
crane_auth/interactor/validations/: base.py  user_creating.py  user_login.py
crane_users/: exceptions.py  settings.py
crane_users/app/: dependencies.py  error_handlers.py  exceptions.py  main.py  utils.py
crane_users/app/routers/: auth.py  user.py
crane_users/domain/: company.py  exceptions.py  user.py
crane_users/domain/entities/: tokens.py  user.py
crane_users/domain/value_objects/: rights.py
crane_users/infra/db_models/: base.py  utils.py
crane_users/infra/repositories/: refresh_session_repository.py  user.py  user_repository.py
crane_users/infra/sqlalchemy_db/: __init__.py  utils.py
crane_users/interactor/: exceptions.py
crane_users/interactor/dto/: auth.py  user.py
(+23 files in other folders)
